# OneTBB-Example

./: CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: build.yml
